--- a/demos/biorxiv250/view.html
+++ b/demos/biorxiv250/view.html
@@ -1,3 +1,5 @@
+# view raw html
+
 [dataTables](http://htmlpreview.github.io/?https://github.com/OCKProject/Force11-OCKWG/blob/master/demos/epmc250/full.dataTables.html)
 
 
